# cpp20-http-client

./: .gitignore  CMakeLists.txt  README.md
examples/: async_get_request.cpp  async_simple.cpp  get_request.cpp  socket.cpp
include/: cpp20_http_client.hpp
include/http_client/: ChunkyBodyParser.hpp  Header.hpp  Protocol.hpp  Request.hpp  RequestMethod.hpp  Response.hpp  ResponseParser.hpp  ResponseProgress.hpp  Socket.hpp  StatusCode.hpp  StatusLine.hpp  exceptions.hpp
include/http_client/algorithms/: ChunkyBodyParser.hpp  ParsedHeadersInterface.hpp  ParsedResponse.hpp  ResponseCallbacks.hpp  ResponseParser.hpp  ResponseProgress.hpp  response-helpers.hpp
include/http_client/utils/: Cleanup.hpp  UniqueHandle.hpp  UrlComponents.hpp  template-helpers.hpp
source/: Socket.cpp  cpp20_http_client.cpp
tests/: CMakeLists.txt  http_response_parser_callbacks.cpp  testing_header.hpp
